--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -191,8 +191,8 @@
       - restart nfs
 
   - name: Copy NFS export conf file
-    copy:
-      src: ../files/nfs-exports
+    template:
+      src: ../templates/nfs-exports.j2
       dest: /etc/exports
     notify:
       - restart nfs
