--- a/tasks/set_facts_.yaml
+++ b/tasks/set_facts_.yaml
@@ -129,4 +129,4 @@
         - httpd
         - rpcbind
         - nfs-server
-  when: ansible_distribution_major_version >= "8"
+  when: ansible_distribution_major_version | int >= 8
