--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -15,9 +15,9 @@
     name: httpd
     state: restarted
 
-- name: restart dhcpd
+- name: restart kea-dhcp4
   service:
-    name: dhcpd
+    name: kea-dhcp4
     state: restarted
 
 - name: restart tftp
